manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "mycluster-e9e5"
    labels:
        app: "mycluster-e9e5"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "mycluster-e9e5"
